--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <!-- Add Favicon -->
+    <link id="favicon" rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <!-- Custom style sheet -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Font awesome -->
